--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </ul>
 
 <h2><a id="audience" class="anchor" href="#audience" name="audience" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Audience</h2>
-<p>This course will emphasize hands-on experience in the creation, management, and consumption of various computational services that support the practice of data science. For the purposes of getting started I will assume that you fit roughly into at least one of three categories as you approach the subject:</p>
+<p>This course emphasizes hands-on experience with the creation, management, and consumption of various  services and systems that support the practice of data science. For the purposes of getting started I will assume that you fit roughly into at least one of three categories as you approach the subject:</p>
 <ol>
   <li>Data Scientist / Researcher</li>
   <li>Developer / CS</li>
@@ -69,14 +69,14 @@
       <td>First week of class</td>
     </tr>
     <tr>
-      <td>Lectures, readings and other material</td>
+      <td>Readings and other material</td>
       <td></td>
       <td>Weekly before class</td>
     </tr>
     <tr>
       <td><a href="https://canvas.its.virginia.edu/courses/105117/assignments" target="_new">Labs</a></td>
       <td>10%</td>
-      <td>Complete 10 required labs.</td>
+      <td>Complete 10 required labs / 1 point each</td>
     </tr>
     <tr>
       <td>Quizzes</td>
@@ -92,11 +92,11 @@
 </table>
 
 <ul>
-  <li><b>Student Survey</b> - a simple questionnaire for me to ascertain baseline skills for the class and students' familiarity with a variety of tools and concepts.
-  <li><b>Lectures / Reading / Materials</b> - Will be posted beforehand. Though not a graded portion of the course, lectures, readings and supporting videos have been carefully selected to introduce and explain important concepts to you. Should you not digest these you will likely not perform well in the course. Lectures and all links will remain posted for the entire semester.
+  <li><b>Student Survey</b> - a simple questionnaire to ascertain baseline skills for the class and students' familiarity with a variety of tools and concepts.
+  <li><b>Readings / Materials</b> - Will be posted beforehand. Though not a graded portion of the course, readings and supporting material have been carefully selected to introduce and explain important concepts to you. Should you not digest these you will likely not perform well in the course. Links will remain posted for the entire semester.
   <li><b>Labs</b> - are an important way for you to interact with tools and course concepts. In most cases these will be in Amazon Web Services or on your local workstation. Labs will either be hosted in AWS Academy (and incur no charges) or are designed to cost very little if you prefer to use your own AWS account (a couple of dollars at most). Students are encouraged to complete as many labs as possible in order to gain competency in the subject matter. There will be ten (10) required labs for the course; optional labs will also be available.
-  <li><b>Quizzes</b> -  will be short, multiple-choice assessments of your understanding of the material. These will generally be given periodically during the semester.
-  <li><b>Data Projects</b> - are graded assignments that implement your understanding of course material. DPs will be posted at least one week before due. There is no time limit on DPs but they must be completed alone, without support of other students or outsiders. Given the full week allowed to work on these assignments, late work will not be accepted.
+  <li><b>Quizzes</b> -  will be short, multiple-choice assessments of your understanding of the material. These will be given periodically during the semester.
+  <li><b>Data Projects</b> - are graded assignments that implement your understanding of course material. DPs will be posted one week before due. There is no time limit on DPs but they must be completed alone, without support of other students or outsiders. Given the full week allowed to work on these assignments, late work will not be accepted.
 </ul>
 
 <h3>Grading Scale</h3>
@@ -180,6 +180,9 @@
 
 <hr size=1 />
 <h2><a id="policies" href="#policies" class="anchor" name="policies" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Policies</h2>
+
+<h3>Late Work </h3>
+<p>Late work will receive a maximum of 50% possible points, except in cases of emergency. (Excusable cases are serious illness or family emergencies.) If you are aware of a scheduling conflict before a specific due date, such as a team sports event, arrangements can be made <i>beforehand</i> to submit your material at a different time.</p>
 
 <h3>University of Virginia Honor System </h3>
 <p>This course is governed by the UVA honor code policy. If you are unfamiliar with this policy or have questions, please contact me. In particular, you are expected to do your own work and not to provide assistance to others on individual activities. Plagiarism or copying code or solutions (or using AI-based LLMs, etc.) even with attribution, is considered cheating. Course materials should not be shared or distributed outside this class. For more information, visit <a href="https://www.virginia.edu/honor">www.virginia.edu/honor</a>.</p> <p>All submissions associated with your computing ID is considered to be your work and is assumed to adhere to this policy.</p>
