--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@
 
 <h2><a id="description" class="anchor" href="#description" name="description" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Course Description</h2>
 
-<p>By definition, "data science" must make meaning out of ever-growing pools of data. But the researcher quickly discovers that the hand examination of any data, while useful for granular analysis, is never adequate for large samples. To produce data science at scale, researchers must make effective use of workflows, pipelines, and processes to ingest, parse, and transform data with tools and automation.</p>
-<p>This course will center on exposing students to contemporary pipelines for data analysis through a series of steadily escalating use cases. The course will begin with simple local database construction and evolve to cloud-based infrastructure such as AWS or Google Cloud. This progression will include learning a variety of systems for data collection, orchestration, transformation, consumption, and others as appropriate.</p>
-
+<p>This course exposes students to the essential technical concepts and skills for designing and running data science workloads. Students will be equipped to select and manage computing environments and storage options large and small. They will also learn methods for software delivery, scaling for larger jobs, and the essential database models for data storage and data analysis.</p>
+<p>Students in this course will become much more familiar with the command-line interface, scripting and managing code, and creating/managing local and cloud-based resources. A central goal of the course is to equip students in the technical aspects of their later work in data science, so that students have a wide range of tools, techniques, and skills for processing a variety of workloads.</p>
 <ul>
   <li><a href="#audience" style="text-decoration:none;color:black;">Audience</a></li>
   <li><a href="#grading" style="text-decoration:none;color:black;">Resources & Requirements</a></li>
