--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 <h2><a id="policies" href="#policies" class="anchor" name="policies" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Policies</h2>
 
 <h3>Late Work </h3>
-<p>Late work will receive a maximum of 50% possible points, except in cases of emergency. (Excusable cases are serious illness or family emergencies.) If you are aware of a scheduling conflict before a specific due date, such as a team sports event, arrangements can be made <i>beforehand</i> to submit your material at a different time.</p>
+<p>Late work will receive a maximum of 50% possible points, except in cases of emergency. (Excusable cases are serious illness or family emergencies.) If you are aware of a scheduling conflict before a specific due date, such as a team sports or university event, arrangements can be made <i>beforehand</i> to submit your material at a different time.</p>
 
 <h3>University of Virginia Honor System </h3>
 <p>This course is governed by the UVA honor code policy. If you are unfamiliar with this policy or have questions, please contact me. In particular, you are expected to do your own work and not to provide assistance to others on individual activities. Plagiarism or copying code or solutions (or using AI-based LLMs, etc.) even with attribution, is considered cheating. Course materials should not be shared or distributed outside this class. For more information, visit <a href="https://www.virginia.edu/honor">www.virginia.edu/honor</a>.</p> <p>All submissions associated with your computing ID is considered to be your work and is assumed to adhere to this policy.</p>
