More schedule items

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -87,6 +87,15 @@
       </td>
     </tr>
     <tr>
+      <td>05</td>
+      <td>02/13/2024</td>
+      <td>Environments: Containers</td>
+      <td>
+        <img src="../images/book.png" /> <a href="https://learning.oreilly.com/library/view/docker-up/9781098131814/" target="_new">Docker: Up & Running</a> <br />
+        <img src="../images/lab.png" /> Lab: Build your first Docker container <br />
+      </td>
+    </tr>
+    <tr>
       <td></td>
       <td></td>
       <td><b>Quiz 1: Environments</b></td>
@@ -94,26 +103,18 @@
       </td>
     </tr>
     <tr>
-      <td>05</td>
-      <td>02/13/2024</td>
-      <td>Infrastructure: Storage</td>
-      <td>
-        <img src="../images/lab.png" /> Lab: Using Amazon S3 <br />
-      </td>
-    </tr>
-    <tr>
       <td>06</td>
       <td>02/20/2024</td>
-      <td>Infrastructure: Manage your compute resources</td>
+      <td>Infrastructure: Storage & Data Management</td>
       <td>
+        <img src="../images/lab.png" />Lab: Using Amazon S3 <br />
       </td>
     </tr>
     <tr>
       <td>07</td>
       <td>02/27/2024</td>
-      <td>Infrastructure: Create resources in the cloud</td>
+      <td>Infrastructure: Manage your compute resources</td>
       <td>
-        <img src="../images/lab.png" /> Lab: Bootstrap an EC2 Instance <br />
       </td>
     </tr>
     <tr>
@@ -126,10 +127,9 @@
     <tr>
       <td>08</td>
       <td>03/12/2024</td>
-      <td>Software Deployment: Isolate environments using containers</td>
+      <td>Infrastructure: Cloud Resources</td>
       <td>
-        <img src="../images/book.png" /> <a href="https://learning.oreilly.com/library/view/docker-up/9781098131814/" target="_new">Docker: Up & Running</a> <br />
-        <img src="../images/lab.png" /> Lab: Build your first Docker container <br />
+        <img src="../images/lab.png" /> <a href="../labs/ec2-bootstrapping.html" target="_new">Lab: Bootstrap an EC2 Instance</a> <br />
       </td>
     </tr>
     <tr>
@@ -152,7 +152,7 @@
       <td>03/26/2024</td>
       <td>Databases: SQL & Relational</td>
       <td>
-        <img src="../images/lab.png" /> Lab: Basic CRUD Operations using SQL <br />
+        <img src="../images/lab.png" /> <a href="https://awsacademy.instructure.com/courses/69227/assignments/672812?module_item_id=6164413" target="_new">Lab: Build a Database Server</a> <br />
       </td>
     </tr>
     <tr>
