--- a/index.html
+++ b/index.html
@@ -91,11 +91,12 @@
 </table>
 
 <ul>
-  <li><b>Student Survey</b> - a simple questionnaire to ascertain baseline skills for the class and students' familiarity with a variety of tools and concepts.
+  <li><b>Student Survey</b> - A simple questionnaire to ascertain baseline skills for the class and students' familiarity with a variety of tools and concepts.
   <li><b>Readings / Materials</b> - Will be posted beforehand. Though not a graded portion of the course, readings and supporting material have been carefully selected to introduce and explain important concepts to you. Should you not digest these you will likely not perform well in the course. Links will remain posted for the entire semester.
-  <li><b>Labs</b> - are an important way for you to interact with tools and course concepts. In most cases these will be in Amazon Web Services or on your local workstation. Labs will either be hosted in AWS Academy (and incur no charges) or are designed to cost very little if you prefer to use your own AWS account (a couple of dollars at most). Students are encouraged to complete as many labs as possible in order to gain competency in the subject matter. There will be ten (10) required labs for the course; optional labs will also be available.
-  <li><b>Quizzes</b> -  will be short, multiple-choice assessments of your understanding of the material. These will be given periodically during the semester.
-  <li><b>Data Projects</b> - are graded assignments that implement your understanding of course material. DPs will be posted one week before due. There is no time limit on DPs but they must be completed alone, without support of other students or outsiders. Given the full week allowed to work on these assignments, late work will not be accepted.
+  <li><b>Attendance</b> - Regular attendance of this class is required. Therefore, you will frequently be asked to sign in when instructed in the classroom.
+  <li><b>Labs</b> - Are an important way for you to interact with tools and course concepts. In most cases these will be in Amazon Web Services or on your local workstation. Labs will either be hosted in AWS Academy (and incur no charges) or are designed to cost very little if you prefer to use your own AWS account (a couple of dollars at most). Students are encouraged to complete as many labs as possible in order to gain competency in the subject matter. There will be ten (10) required labs for the course; optional labs will also be available.
+  <li><b>Quizzes</b> -  Will be short, multiple-choice assessments of your understanding of the material. These will be given periodically during the semester.
+  <li><b>Data Projects</b> - Are graded assignments that implement your understanding of course material. DPs will be posted one week before due. There is no time limit on DPs but they must be completed alone, without support of other students or outsiders. Given the full week allowed to work on these assignments, late work will not be accepted.
 </ul>
 
 <h3>Grading Scale</h3>
