--- a/schedule/index.html
+++ b/schedule/index.html
@@ -25,7 +25,7 @@
         <ul>
           <li><a href="https://canvas.its.virginia.edu/courses/105117/assignments" target="_new">Full list of <strong>Labs</strong></a></li>
           <li><a href="https://awsacademy.instructure.com/" target="_new">Hands-on <strong>AWS</strong></a></li>
-          <li><a href="" target="_new"><strong></strong></a></li>
+          <li><a href="https://console.aws.amazon.com/" target="_new">AWS<strong>Console</strong></a></li>
         </ul>
       </header>
 
