Minify the schedule

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -40,173 +40,115 @@
       <th>#</th>
       <th style="width:15%;">Week</th>
       <th>Topics(s)</th>
-      <th style="width:40%;">Read / Watch / Recommended Labs</th>
     </tr>
   </thead>
   <tbody>
     <tr>
       <td>00</td>
       <td> </td>
-      <td>Student Survey</td>
       <td>
-        <a href="https://virginia.az1.qualtrics.com/jfe/form/SV_2o9g4mLR8vBBuNU" target="_new"><img src="../images/writing.png" /> <b>Take the Survey</b></a> <br />
+        <a href="https://virginia.az1.qualtrics.com/jfe/form/SV_2o9g4mLR8vBBuNU" target="_new"><img src="../images/writing.png" /> <b>Student Survey</b></a> <br />
       </td>
     </tr>
     <tr>
       <td>01</td>
       <td>01/18/2024</td>
       <td>Course introduction: Data Engineering Basics</td>
-      <td>
-        <img src="../images/book.png" /> <a href="https://medium.com/@rchang/a-beginners-guide-to-data-engineering-part-i-4227c5c457d7" target="_new">Data Engineering - Parts I/II/III</a> <br />
-      </td>
     </tr>
     <tr>
       <td>02</td>
       <td>01/23/2024</td>
       <td>Environments: The Linux command line and filesystem</td>
-      <td>
-        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=8I0GAGJEx4c" target="_new">A Brief History of UNIX</a> <br />
-        <img src="../images/book.png" /> <a href="https://learning.oreilly.com/library/view/efficient-linux-at/9781098113391/" target="_new">Efficient Linux at the Command Line</a> <br />
-        <img src="../images/lab.png" /> Lab: Working with the CLI <br />
-      </td>
     </tr>
     <tr>
       <td>03</td>
       <td>01/30/2024</td>
       <td>Environments: Git & GitHub</td>
-      <td>
-        <img src="../images/book.png" /> <a href="https://learning.oreilly.com/library/view/learning-git/9781098133900/" target="_new">Learning Git</a> <br />
-        <img src="../images/lab.png" /> Lab: Using Git <br />
-      </td>
     </tr>
     <tr>
       <td>04</td>
       <td>02/06/2024</td>
       <td>Environments: Scripting & pipelines</td>
-      <td>
-      </td>
     </tr>
     <tr>
       <td>05</td>
       <td>02/13/2024</td>
       <td>Environments: Containers</td>
-      <td>
-        <img src="../images/book.png" /> <a href="https://learning.oreilly.com/library/view/docker-up/9781098131814/" target="_new">Docker: Up & Running</a> <br />
-        <img src="../images/lab.png" /> Lab: Build your first Docker container <br />
-      </td>
     </tr>
     <tr>
       <td></td>
       <td></td>
       <td><b>Quiz 1: Environments</b></td>
-      <td>
-      </td>
     </tr>
     <tr>
       <td>06</td>
       <td>02/20/2024</td>
       <td>Infrastructure: Storage & Data Management</td>
-      <td>
-        <img src="../images/lab.png" /> Lab: Using Amazon S3 <br />
-      </td>
     </tr>
     <tr>
       <td>07</td>
       <td>02/27/2024</td>
       <td>Infrastructure: Manage your compute resources</td>
-      <td>
-      </td>
     </tr>
     <tr>
       <td></td>
       <td>03/05/2024</td>
       <td><b>No Class - Spring Break</b></td>
-      <td>
-      </td>
     </tr>
     <tr>
       <td>08</td>
       <td>03/12/2024</td>
       <td>Infrastructure: Cloud Resources</td>
-      <td>
-        <img src="../images/lab.png" /> <a href="../labs/ec2-bootstrapping.html" target="_new">Lab: Bootstrap an EC2 Instance</a> <br />
-      </td>
     </tr>
     <tr>
       <td></td>
       <td></td>
       <td><b>Quiz 2: Infrastructure</b></td>
-      <td>
-      </td>
     </tr>
     <tr>
       <td>09</td>
       <td>03/19/2024</td>
       <td>Databases: Managing Data</td>
-      <td>
-        <img src="../images/book.png" /> <a href="../assets/data-science-data-management.pdf" target="_new">Data Management</a> <br />
-      </td>
     </tr>
     <tr>
       <td>10</td>
       <td>03/26/2024</td>
       <td>Databases: SQL & Relational</td>
-      <td>
-        <img src="../images/lab.png" /> <a href="https://awsacademy.instructure.com/courses/69227/assignments/672812?module_item_id=6164413" target="_new">Lab: Build a Database Server</a> <br />
-      </td>
     </tr>
     <tr>
       <td>11</td>
       <td>04/02/2024</td>
       <td>Databases: NoSQL & Unstructured Data</td>
-      <td>
-        <img src="../images/lab.png" /> Lab: Work with MongoDB Atlas <br />
-      </td>
     </tr>
     <tr>
       <td></td>
       <td></td>
       <td><b>Quiz 3: Databases</b></td>
-      <td>
-      </td>
     </tr>
     <tr>
       <td>12</td>
       <td>04/09/2024</td>
       <td>Data Pipelines: Scaling & Big Data</td>
-      <td>
-        <img src="../images/lab.png" /> Lab: Horizontal and Vertical Scaling <br />
-      </td>
     </tr>
     <tr>
       <td>13</td>
       <td>04/16/2024</td>
       <td>Data Pipelines: Jobs</td>
-      <td>
-        <img src="../images/lab.png" /> Lab: Run a Job in Kubernetes <br />
-      </td>
     </tr>
     <tr>
       <td>14</td>
       <td>04/23/2024</td>
       <td>Data Pipelines: Automation</td>
-      <td>
-        <img src="../images/lab.png" /> Lab: Create a Serverless Workflow <br />
-
-      </td>
     </tr>
     <tr>
       <td></td>
       <td></td>
       <td><b>Quiz 4: Data Pipelines</b></td>
-      <td>
-      </td>
     </tr>
     <tr>
       <td>15</td>
       <td>04/30/2024</td>
       <td>Course Wrap-Up</td>
-      <td> </td>
     </tr>
   </tbody>
 </table>
